--- a/dot_config/zsh/dot_zprofile.tmpl
+++ b/dot_config/zsh/dot_zprofile.tmpl
@@ -15,6 +15,12 @@ fi
 # pyenv set root early; init in interactive (tools)
 export PYENV_ROOT="${PYENV_ROOT:-$HOME/.pyenv}"
 
+{{ if eq .chezmoi.os "linux" }}
+if [[ -d "$PYENV_ROOT/bin" ]]; then
+  export PATH="$PYENV_ROOT/bin:$PATH"
+fi
+{{ end }}
+
 # Rust/Cargo
 if [[ -d "$HOME/.cargo/env" ]]; then
   source "$HOME/.cargo/env"
